--- a/accessible/tests/mochitest/Makefile.in
+++ b/accessible/tests/mochitest/Makefile.in
@@ -67,6 +67,7 @@ _TEST_FILES =\
 		test_bug420863.html \
 		$(warning	test_childAtPoint.xul temporarily disabled) \
 		test_cssattrs.html \
+		test_elm_txtcntnr.html \
 		test_events_caretmove.html \
 		test_events_mutation.html \
 		$(warning test_groupattrs.xul temporarily disabled) \
