--- a/accessible/tests/mochitest/Makefile.in
+++ b/accessible/tests/mochitest/Makefile.in
@@ -47,6 +47,7 @@ include $(topsrcdir)/config/rules.mk
 
 _TEST_FILES =\
 		moz.png \
+		$(topsrcdir)/content/media/video/test/bug461281.ogg \
 		longdesc_src.html \
 		attributes.js \
 		common.js \
@@ -68,6 +69,8 @@ _TEST_FILES =\
 		$(warning	test_childAtPoint.xul temporarily disabled) \
 		test_cssattrs.html \
 		test_descr.html \
+		test_elm_filectrl.html \
+		test_elm_media.html \
 		test_elm_txtcntnr.html \
 		test_events_caretmove.html \
 		test_events_mutation.html \
