Bug 491431 - No way to distinguish tab detach vs tab close, r=gavin

--- a/browser/base/content/test/Makefile.in
+++ b/browser/base/content/test/Makefile.in
@@ -111,6 +111,7 @@ _BROWSER_FILES = browser_sanitize-timespans.js \
                  browser_bug479408_sample.html \
                  browser_sanitizeDialog.js \
                  browser_tabs_owner.js \
+                 browser_bug491431.js \
     $(NULL)
 
 ifeq (,$(filter mac cocoa,$(MOZ_WIDGET_TOOLKIT)))
