Bug 489549 - Buttons of HTML5 audio and video element control set have no accessible names, r=marcoz, davidb, dolske, enndeaking, sr=neil, a=beltzner
--HG--
rename : accessible/tests/mochitest/nsIAccessible_actions.js => accessible/tests/mochitest/actions.js
rename : accessible/tests/mochitest/test_nsIAccessible_actions.xul => accessible/tests/mochitest/test_actions.xul
rename : accessible/tests/mochitest/test_nsIAccessible_actions.html => accessible/tests/mochitest/test_actions_aria.html

--- a/accessible/tests/mochitest/Makefile.in
+++ b/accessible/tests/mochitest/Makefile.in
@@ -49,17 +49,19 @@ _TEST_FILES =\
 		moz.png \
 		$(topsrcdir)/content/media/video/test/bug461281.ogg \
 		longdesc_src.html \
+		actions.js \
 		attributes.js \
 		common.js \
 		events.js \
 		layout.js \
-		nsIAccessible_actions.js \
 		nsIAccessible_name.css \
 		nsIAccessible_name.js \
 		nsIAccessible_name.xbl \
  		nsIAccessible_selects.js \
 		nsIAccessible_states.js \
 		nsIAccessibleEditableText.js \
+  $(warning test_actions.xul temporarily disabled) \
+		test_actions_aria.html \
 		test_aria_activedescendant.html \
 		test_aria_role_article.html \
 		test_aria_role_equation.html \
@@ -77,8 +79,6 @@ _TEST_FILES =\
 		$(warning test_groupattrs.xul temporarily disabled) \
 	$(warning test_table_indexes.html temporarily disabled) \
  		test_nsHyperTextAcc_roles.html \
-		test_nsIAccessible_actions.html \
-		$(warning test_nsIAccessible_actions.xul temporarily disabled) \
 		test_nsIAccessible_applicationAccessible.html \
 		test_nsIAccessible_name.html \
 		test_nsIAccessible_name_button.html \
