--- a/accessible/tests/mochitest/Makefile.in
+++ b/accessible/tests/mochitest/Makefile.in
@@ -54,6 +54,7 @@ _TEST_FILES =\
 		common.js \
 		events.js \
 		layout.js \
+		value.js \
 		nsIAccessible_name.css \
 		nsIAccessible_name.js \
 		nsIAccessible_name.xbl \
@@ -73,7 +74,6 @@ _TEST_FILES =\
 		test_descr.html \
 		test_elm_filectrl.html \
 		test_elm_media.html \
-		test_elm_prgrsmtr.xul \
 		test_elm_txtcntnr.html \
 		test_events_caretmove.html \
 		test_events_mutation.html \
@@ -109,6 +109,7 @@ _TEST_FILES =\
 		test_textattrs.html \
 		test_textboxes.html \
 		test_textboxes.xul \
+		test_value.xul \
 		testTextboxes.js \
 		test_bug429285.html \
 		test_bug434464.html \
