Bug 492518 - xul:slider accessible of xul:scale is accessible illegally, r=marcoz, davidb, a=beltzner

--- a/accessible/tests/mochitest/Makefile.in
+++ b/accessible/tests/mochitest/Makefile.in
@@ -76,6 +76,7 @@ _TEST_FILES =\
 		test_elm_media.html \
 		test_elm_txtcntnr.html \
 		test_events_caretmove.html \
+		test_events_focus.xul \
 		test_events_mutation.html \
 		$(warning test_groupattrs.xul temporarily disabled) \
 	$(warning test_table_indexes.html temporarily disabled) \
